--- a/css/layout.css
+++ b/css/layout.css
@@ -11,6 +11,7 @@
 html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -356,6 +357,7 @@ body {
   font-weight: var(--font-weight-bold);
   color: var(--color-text);
   font-size: var(--font-size-md);
+  flex-shrink: 0;
 }
 
 /* =========================================
